# AI_Trader

./: .env.example  .gitignore  alpaca_stream.py  best_model.pth  build.sh  clean.py  clean_ui.py  config.ini  copy_and_modify.py  create_startup.py  dark_mode_patch.py  diff.txt  exophase_profile.html  extract.py  extract2.py  extract3.py  fix_live_pnl.py  fix_models.py  fix_tags.py  fix_ui_pnl.py  hologram_sounds.txt  inject_fleet.py  jarvis_sounds.txt  manage.py  old_login.html  oracle_deployment.md  out.txt  patch_absolute_goal.py  patch_add_api.py  patch_alert.py  patch_alloc.py  patch_async.py  patch_base.py  patch_broker.py  patch_broker_account.py  patch_broker_id.py  patch_copy_logs.py  patch_css.py  patch_dash2.py  patch_dash3.py  (+76 more)
config/: config.yaml  logging.yaml
control_panel/: admin.py  apps.py  consumers.py  dashboard_boot.py  env_manager.py  model_registry.py  models.py  tasks.py  tests.py  urls.py  views.py
data/: historical_btcusd.csv  sample_spy.csv  validation_btcusd.csv
scratch/: check_db.py  check_template.py  fetch_full.py  fetch_steam.py  guide_body.html  inspect_guide.py  read_logs.py  steam_response.html  test_broker.py  test_scraper.py
scripts/: ai_trader.service  setup_autoboot.sh  start_server.sh
src/: strategies.py
templates/: backtest_lab.html  base.html  changelog.html  dashboard.html  decision_flow.html  evaluation.html  evaluation_report.html  evolution_hub.html  guide.html  login.html  logout.html  model_detail.html  models_hub.html  neural_cortex.html  papertrading.html  papertrading_fleet.html  realtrading.html  relax.html  (+14 more)
(+111 files in other folders)
