[tool.poetry]
name = "rl-trading-backend"
version = "0.1.0"
description = ""
authors = ["TharunSree <tarunsree@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Core RL and environment
torch = "^2.3.1"
gymnasium = "^0.29.1"
# Config and Utilities
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
# For data handling later
pandas = "^2.2.2"
pyarrow = "^21.0.0"
fastparquet = "^2024.11.0"
poetry-core = "^2.1.3"
numpy = { version = "*", python = ">=3.11,<4.0" }
tqdm = "^4.67.1"
alpaca-trade-api = "^3.2.0"
scikit-learn = "^1.7.1"
# Removed pandas-ta dependency


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
ruff = "^0.4.4"
mypy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"